--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
-<head>test</head>
+<head><title>test</title>
+<style>
+body{
+background-color:pink;
+}
+</style>
+</head>
 <body>測試中</body>
 </html>
